@@ -30,6 +30,7 @@ import org.jamwiki.WikiMessage;
 import org.jamwiki.model.Namespace;
 import org.jamwiki.model.VirtualWiki;
 import org.jamwiki.utils.LinkUtil;
+import org.jamwiki.utils.Utilities;
 import org.jamwiki.utils.WikiLink;
 import org.jamwiki.utils.WikiLogger;
 import org.jamwiki.utils.WikiUtil;
@@ -406,6 +407,17 @@ public class WikiPageInfo {
 	 */
 	public String getTopicName() {
 		return this.topicName;
+	}
+
+	/**
+	 * Return a link to edit the current topic, or <code>null</code> if there is
+	 * no current topic.
+	 *
+	 * @return Return a link to edit the current topic, or <code>null</code> if
+	 *  there is no current topic.
+	 */
+	public String getTopicEditLink() {
+		return (this.special || StringUtils.isBlank(this.topicName)) ? null : "Special:Edit?topic=" + Utilities.encodeAndEscapeTopicName(this.topicName);
 	}
 
 	/**
